Fix margins and apply Lora font to the entire body
Margins are interesting. They sometimes collapse (i.e. overlap)
but sometimes they don't. I was having collapsed margins between
my text divs, but uncollapsed margins on my images, which looked
ugly. I skimmed this article:
https://www.joshwcomeau.com/css/rules-of-margin-collapse/
but don't understand all of it. Mostly, I just messed with shit
until the image didn't have extra room around them.

I also learned that some html elements have built in padding
and margins and whatnot. So my headers had too much space
because I was adding a reasonable amount of space in addition
to the built in space.

I also realized that it's way easier to apply a font to the entire
body rather than just to p tags, because all of my ul and ol's
were using Times instead of Lora font. That way I just have to
specify anything that I don't want to use Lora font, like headers.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-p {
+body {
 	font-family: Lora, sans-serif;
+}
+p {
+	margin: 16px 0px;
 }
 
 h1,
@@ -9,14 +12,25 @@ h4,
 h5,
 h6 {
 	font-family: Ubuntu, serif;
+	margin: 0px;
+}
+
+img {
+	margin: 0px 20px;
 }
 
 div,
 img {
-	border: solid 2px;
+	border: solid 3px;
 	border-radius: 4px;
-	margin: 20px;
 }
+
 div {
-	padding: 10px;
+	padding: 10px 7px;
+	margin: 20px;
+	background-color: aliceblue;
+}
+
+h1 {
+	margin: 10px 22px 10px;
 }
